examples/test/testpolicy16256.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16256
  namespace: namespace222
spec:
  podSelector:
    matchLabels:
      key31: value17
      key32: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value30
          key0: value27
          key4: value29
      podSelector:
        matchLabels:
          key21: value39
          key5: value30
